fixes header z-index

--- a/app/assets/style.sass
+++ b/app/assets/style.sass
@@ -70,7 +70,7 @@ header
 	height: 64px
 	box-shadow: 0px 1px 0px rgba(black, 0.05)
 	position: relative
-	z-index: 1003
+	z-index: 1010
 	nav
 		ul
 			+reset-list
